; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_8273.c_syntax.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_8273.c_syntax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"\0ATelnet-Ftp Service Server v1.x Multiple Vulnerability\0A\00", align 1
@.str.1 = private unnamed_addr constant [55 x i8] c"-----------------------------------------------------\0A\00", align 1
@.str.2 = private unnamed_addr constant [75 x i8] c"=>Syntax  : <%s> <ip> <port> <login> <passwd> <option> <argument_option>\0A\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [29 x i8] c"=>Option  : -df\09\09Delet File\0A\00", align 1
@.str.4 = private unnamed_addr constant [34 x i8] c"            -cd\09\09Creat Directory\0A\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"            -dd\09\09Delet Directory\0A\00", align 1
@.str.6 = private unnamed_addr constant [52 x i8] c"            -crash\09Remote Crash with Request RETR\0A\0A\00", align 1
@.str.7 = private unnamed_addr constant [63 x i8] c"=>Exemple : %s 127.0.0.1 21 login1 passwd2 -df ../../boot.ini\0A\00", align 1
@.str.8 = private unnamed_addr constant [58 x i8] c"          : %s 127.0.0.1 21 login1 passwd2 -cd ../../poc\0A\00", align 1
@.str.9 = private unnamed_addr constant [63 x i8] c"          : %s 127.0.0.1 21 login1 passwd2 -dd ../../WINDOWS\0A\0A\00", align 1
@.str.10 = private unnamed_addr constant [52 x i8] c"=>Crash   : %s 127.0.0.1 21 anonymous aaaa -crash\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @syntax(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 (i32, i8*, ...) @fprintf(i32 %3, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 (i32, i8*, ...) @fprintf(i32 %7, i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str.2, i64 0, i64 0), i8* %8)
  %10 = load i32, i32* @stdout, align 4
  %11 = call i32 (i32, i8*, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0))
  %12 = load i32, i32* @stdout, align 4
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.4, i64 0, i64 0))
  %14 = load i32, i32* @stdout, align 4
  %15 = call i32 (i32, i8*, ...) @fprintf(i32 %14, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0))
  %16 = load i32, i32* @stdout, align 4
  %17 = call i32 (i32, i8*, ...) @fprintf(i32 %16, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.6, i64 0, i64 0))
  %18 = load i32, i32* @stdout, align 4
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 (i32, i8*, ...) @fprintf(i32 %18, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.7, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* @stdout, align 4
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.8, i64 0, i64 0), i8* %22)
  %24 = load i32, i32* @stdout, align 4
  %25 = load i8*, i8** %2, align 8
  %26 = call i32 (i32, i8*, ...) @fprintf(i32 %24, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.9, i64 0, i64 0), i8* %25)
  %27 = load i32, i32* @stdout, align 4
  %28 = load i8*, i8** %2, align 8
  %29 = call i32 (i32, i8*, ...) @fprintf(i32 %27, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.10, i64 0, i64 0), i8* %28)
  %30 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
